--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "14.x"
+  },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
