--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "needle": "^3.0.0",
+    "octokit": "^1.7.0",
     "twitter": "^1.7.1"
   }
 }
